--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
 		<title>StartPage</title>
 	</head>
 	<body class="bg-zinc-800 bg-[url('./bg.png')] bg-center bg-cover bg-no-repeat h-screen w-screen">
-		<div class="w-full h-full backdrop-blur-sm grid p-10">
-			<div class="card backdrop-blur-md bg-black bg-opacity-10"></div>
+		<div class="w-full h-full backdrop-blur-sm flex space-x-5 p-5" id="cards">
+			<div id="timeDiv" class="w-[300px] h-[100px] bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center">
+				<span id="time" class="text-white font-bold text-3xl text-center w-full">00:00:00</span>
+			</div>
+			<div id="searchDiv" class="w-[600px] h-[100px] bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center">
+				<form action="https://google.com/search">
+					<input
+						type="search"
+						autocomplete="off"
+						class="border-none outline-none bg-black bg-opacity-10 text-white w-[500px] h-[80px] rounded-full p-10 text-2xl"
+						name="q"
+						autofocus
+						placeholder="Search"
+					/>
+				</form>
+			</div>
 		</div>
+		<script src="script.js"></script>
 	</body>
 </html>
