--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 					/>
 				</form>
 			</div>
-			<div id="weatherDiv" class="w-[600px] h-[600px] bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[13/18] row-[1/6]"></div>
+			<div id="weatherDiv" class="w-[600px] h-[600px] bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[13/18] row-[1/6]">
+				
+			</div>
 			<div id="bookmarkDiv" class="w-[1125px] h-[400px] gap-5 bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center flex-wrap col-[1/10]">
 				<div
 					onclick="window.location.href='https://youtube.com/'"
