--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>StartPage</title>
   </head>
   <body class="bg-zinc-800 bg-[url('./bg.png')] bg-center bg-cover bg-no-repeat h-screen w-screen text-white">
-    <main class="h-full w-full backdrop-blur-sm">
+    <main class="h-full w-full backdrop-blur-sm bg-black bg-opacity-5">
       <div
         class="w-[1800px] h-[900px] grid grid-cols-[repeat(18,103px)] grid-rows-[repeat(10,92px)] gap-2 p-5"
         id="cards"
       >
         <div
           id="timeDiv"
-          class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/4]"
+          class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/5]"
         >
           <span id="time" class="font-bold text-3xl text-center w-full">00:00:00</span>
         </div>
         <div
           id="searchDiv"
-          class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[4/15]"
+          class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[5/15]"
         >
           <form action="https://google.com/search" class="w-full h-full flex items-center justify-center">
             <input
@@ -43,7 +43,7 @@
         </div>
         <div
           id="jokeDiv"
-          class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[12/18] row-start-4"
+          class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[12/18] row-start-5"
         >
           <div class="m-5 w-full h-full flex items-center justify-center">
             <span id="joke" class="font-bold text-2xl"></span>
@@ -134,7 +134,6 @@
               autocomplete="off"
               class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
               name="q"
-              autofocus
               placeholder="Github search"
             />
           </form>
@@ -149,8 +148,21 @@
               autocomplete="off"
               class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
               name="search_query"
-              autofocus
               placeholder="Youtube search"
+            />
+          </form>
+        </div>
+        <div
+          id="youtubeSearchDiv"
+          class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[12/18]"
+        >
+          <form action="https://stackoverflow.com/search" class="w-full h-full flex items-center justify-center">
+            <input
+              type="search"
+              autocomplete="off"
+              class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
+              name="q"
+              placeholder="Stackoverflow search"
             />
           </form>
         </div>
