--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 					/>
 				</form>
 			</div>
-			<div id="weatherDiv" class="w-[600px] h-[600px] bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[13/18] row-[1/6]">
-				
-			</div>
+			<div id="weatherDiv" class="w-[600px] h-[600px] bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[13/18] row-[1/6]"></div>
 			<div id="bookmarkDiv" class="w-[1125px] h-[400px] gap-5 bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center flex-wrap col-[1/10]">
 				<div
 					onclick="window.location.href='https://youtube.com/'"
@@ -63,7 +61,7 @@
 					<span>Telegram</span>
 				</div>
 				<div
-					onclick="window.location.href='https://intstagram.com/'"
+					onclick="window.location.href='https://instagram.com/'"
 					class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
 				>
 					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/instagram.com" />
