--- a/index.html
+++ b/index.html
@@ -1,146 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="https://cdn.tailwindcss.com"></script>
-		<title>StartPage</title>
-	</head>
-	<body class="bg-zinc-800 bg-[url('./bg.png')] bg-center bg-cover bg-no-repeat h-screen w-screen text-white">
-		<main class="h-full w-full backdrop-blur-lg bg-black bg-opacity-10">
-			<div class="w-[1800px] h-[900px] grid grid-cols-[repeat(18,103px)] grid-rows-[repeat(10,92px)] gap-2 p-5" id="cards">
-				<div id="timeDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/5]">
-					<span id="time" class="font-bold text-3xl text-center w-full">00:00:00</span>
-				</div>
-				<div id="searchDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[5/15]">
-					<form action="https://google.com/search" class="w-full h-full flex items-center justify-center">
-						<input
-							type="search"
-							autocomplete="off"
-							class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
-							name="q"
-							autofocus
-							placeholder="Google search"
-						/>
-					</form>
-				</div>
-				<div id="weatherDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[15/18]">
-					<div class="m-5 w-full h-full flex items-center justify-center">
-						<span id="weather" class="font-bold text-3xl"></span>
-					</div>
-				</div>
-				<div id="jokeDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/8] row-start-5">
-					<div class="m-5 w-full h-full flex items-center justify-center">
-						<span id="joke" class="font-bold text-2xl"></span>
-					</div>
-				</div>
-				<div id="bookmarkDiv" class="gap-5 bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center flex-wrap col-[8/18] row-[2/6]">
-					<div
-						onclick="window.location.href='https://youtube.com/'"
-						class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
-					>
-						<img class="h-28 rounded-3xl" src="https://icon.horse/icon/youtube.com" />
-						<span>Youtube</span>
-					</div>
-					<div
-						onclick="window.location.href='https://github.com/'"
-						class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
-					>
-						<img class="h-28 rounded-3xl" src="https://icon.horse/icon/github.com" />
-						<span>Github</span>
-					</div>
-					<div
-						onclick="window.location.href='https://chess.com/'"
-						class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
-					>
-						<img class="h-28 rounded-3xl" src="https://icon.horse/icon/chess.com" />
-						<span>Chess</span>
-					</div>
-					<div
-						onclick="window.location.href='https://chat.openai.com/'"
-						class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
-					>
-						<img class="h-28 rounded-3xl" src="https://icon.horse/icon/openai.com" />
-						<span>ChatGPT</span>
-					</div>
-					<div
-						onclick="window.location.href='https://web.telegram.org/'"
-						class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
-					>
-						<img class="h-28 rounded-3xl" src="https://icon.horse/icon/web.telegram.org" />
-						<span>Telegram</span>
-					</div>
-					<div
-						onclick="window.location.href='https://instagram.com/'"
-						class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
-					>
-						<img class="h-28 rounded-3xl" src="https://icon.horse/icon/instagram.com" />
-						<span>Instagram</span>
-					</div>
-					<div
-						onclick="window.location.href='https://notion.com/'"
-						class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
-					>
-						<img class="h-28 rounded-3xl" src="https://icon.horse/icon/notion.com" />
-						<span>Notion</span>
-					</div>
-					<div
-						onclick="window.location.href='https://trello.com/'"
-						class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
-					>
-						<img class="h-28 rounded-3xl" src="https://icon.horse/icon/trello.com" />
-						<span>Trello</span>
-					</div>
-					<div
-						onclick="window.location.href='https://mail.yandex.com/'"
-						class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
-					>
-						<img class="h-28 rounded-3xl" src="https://icon.horse/icon/mail.yandex.com" />
-						<span>Ymail</span>
-					</div>
-					<div
-						onclick="window.location.href='https://mail.google.com/'"
-						class="w-48 h-40 backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer"
-					>
-						<img class="h-28 rounded-3xl" src="https://icon.horse/icon/mail.google.com" />
-						<span>Gmail</span>
-					</div>
-				</div>
-				<div id="githubSearchDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/8]">
-					<form action="https://github.com/search" class="w-full h-full flex items-center justify-center">
-						<input
-							type="search"
-							autocomplete="off"
-							class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
-							name="q"
-							placeholder="Github search"
-						/>
-					</form>
-				</div>
-				<div id="youtubeSearchDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/8]">
-					<form action="https://youtube.com/results" class="w-full h-full flex items-center justify-center">
-						<input
-							type="search"
-							autocomplete="off"
-							class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
-							name="search_query"
-							placeholder="Youtube search"
-						/>
-					</form>
-				</div>
-				<div id="StackSearchDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/8]">
-					<form action="https://stackoverflow.com/search" class="w-full h-full flex items-center justify-center">
-						<input
-							type="search"
-							autocomplete="off"
-							class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
-							name="q"
-							placeholder="Stackoverflow search"
-						/>
-					</form>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script src="https://cdn.tailwindcss.com"></script>
+	<title>StartPage</title>
+</head>
+
+<body class="bg-zinc-800 bg-[url('./bg.png')] bg-center bg-cover bg-no-repeat h-screen w-screen text-white">
+	<main class="h-full w-full backdrop-blur-lg bg-black bg-opacity-10">
+		<div class="w-[1800px] h-[900px] grid grid-cols-[repeat(18,103px)] grid-rows-[repeat(10,92px)] gap-2 p-5"
+			id="cards">
+			<div id="timeDiv"
+				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/5]">
+				<span id="time" class="font-bold text-3xl text-center w-full">00:00:00</span>
+			</div>
+			<div id="searchDiv"
+				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[5/15]">
+				<form action="https://google.com/search" class="w-full h-full flex items-center justify-center">
+					<input type="search" autocomplete="off"
+						class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
+						name="q" autofocus placeholder="Google search" />
+				</form>
+			</div>
+			<div id="weatherDiv"
+				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[15/18]">
+				<div class="m-5 w-full h-full flex items-center justify-center">
+					<span id="weather" class="font-bold text-3xl"></span>
 				</div>
 			</div>
-		</main>
-		<script src="script.js"></script>
-	</body>
+			<div id="jokeDiv"
+				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/8] row-start-5">
+				<div class="m-5 w-full h-full flex items-center justify-center">
+					<span id="joke" class="font-bold text-2xl"></span>
+				</div>
+			</div>
+			<div id="bookmarkDiv"
+				class="gap-5 p-5 bg-white bg-opacity-10 rounded-lg shadow-md grid grid-rows-2 grid-cols-5 items-center justify-start col-[8/18] row-[2/6]">
+				<div onclick="window.location.href='https://youtube.com/'"
+					class="w-full h-full backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer">
+					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/youtube.com" />
+					<span>Youtube</span>
+				</div>
+				<div onclick="window.location.href='https://github.com/'"
+					class="w-full h-full backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer">
+					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/github.com" />
+					<span>Github</span>
+				</div>
+				<div onclick="window.location.href='https://chess.com/'"
+					class="w-full h-full backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer">
+					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/chess.com" />
+					<span>Chess</span>
+				</div>
+				<div onclick="window.location.href='https://chat.openai.com/'"
+					class="w-full h-full backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer">
+					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/openai.com" />
+					<span>ChatGPT</span>
+				</div>
+				<div onclick="window.location.href='https://web.telegram.org/'"
+					class="w-full h-full backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer">
+					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/web.telegram.org" />
+					<span>Telegram</span>
+				</div>
+				<div onclick="window.location.href='https://instagram.com/'"
+					class="w-full h-full backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer">
+					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/instagram.com" />
+					<span>Instagram</span>
+				</div>
+				<div onclick="window.location.href='https://notion.com/'"
+					class="w-full h-full backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer">
+					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/notion.com" />
+					<span>Notion</span>
+				</div>
+				<div onclick="window.location.href='https://trello.com/'"
+					class="w-full h-full backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer">
+					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/trello.com" />
+					<span>Trello</span>
+				</div>
+				<div onclick="window.location.href='https://mail.yandex.com/'"
+					class="w-full h-full backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer">
+					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/mail.yandex.com" />
+					<span>Ymail</span>
+				</div>
+				<div onclick="window.location.href='https://mail.google.com/'"
+					class="w-full h-full backdrop-blur-xl rounded-3xl bg-black bg-opacity-10 flex justify-center items-center flex-col hover:cursor-pointer">
+					<img class="h-28 rounded-3xl" src="https://icon.horse/icon/mail.google.com" />
+					<span>Gmail</span>
+				</div>
+			</div>
+			<div id="githubSearchDiv"
+				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/8]">
+				<form action="https://github.com/search" class="w-full h-full flex items-center justify-center">
+					<input type="search" autocomplete="off"
+						class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
+						name="q" placeholder="Github search" />
+				</form>
+			</div>
+			<div id="youtubeSearchDiv"
+				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/8]">
+				<form action="https://youtube.com/results" class="w-full h-full flex items-center justify-center">
+					<input type="search" autocomplete="off"
+						class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
+						name="search_query" placeholder="Youtube search" />
+				</form>
+			</div>
+			<div id="StackSearchDiv"
+				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center col-[1/8]">
+				<form action="https://stackoverflow.com/search" class="w-full h-full flex items-center justify-center">
+					<input type="search" autocomplete="off"
+						class="border-none outline-none bg-black bg-opacity-10 w-5/6 h-4/5 rounded-full p-10 text-2xl"
+						name="q" placeholder="Stackoverflow search" />
+				</form>
+			</div>
+		</div>
+	</main>
+	<script src="script.js"></script>
+</body>
+
 </html>
